<resources>
    <string name="app_name">Koobi Customer</string>
    <string name="facebook_app_id">629983144084097</string>
    <string name="fb_login_protocol_scheme">fb629983144084097</string>
    <string name="email_or_username">Email Or Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup_as_service_provider">Sign up as Service Provider</string>
    <string name="forgot_password">Forgotten Username or Password?</string>
    <string name="sign_up">Sign up</string>
    <string name="todo">TODO</string>
    <string name="loading">Loading</string>
    <string name="already_have_an_account">Already have an account ? <b>Login</b></string>
    <string name="already_have_account">Already have an account?</string>
    <string name="remind_my_password">Remind My Password</string>
    <string name="enter_the_email">Enter the email</string>
    <string name="forgot_pwd_remind_txt">We will send you a message with a link to reset your password.</string>
    <string name="reset_password">Reset Password</string>
    <string name="str_cropping_video_please_wait">Cropping Video Please Wait</string>
    <string name="msg_some_thing_went_wrong">Some thing went wrong, please try again later.</string>
    <string name="error_session_expired">Alert message</string>
    <string name="error_session_expired_msg">Your session is expired please login again</string>
    <string name="mcam_defaultDuration">00:00</string>
    <string name="mcam_permissions_needed">Permissions Needed</string>
    <string name="mcam_video_perm_warning">Permission to access your microphone and camera is needed, the camera will now close.</string>
    <string name="mcam_retry">RETRY</string>
    <string name="mcam_use_video">USE VIDEO</string>
    <string name="mcam_use_stillshot">USE STILLSHOT</string>
    <string name="mcam_portrait">Portrait</string>
    <string name="mcam_portrait_warning">It\'s recommended that you record in landscape. Record in portrait?</string>
    <string name="mcam_yes">Yes</string>
    <string name="mcam_error">Error</string>
    <string name="mcam_video_capture_unsupported">Your device does not support video capture.</string>
    <string name="mcam_no_audio_access">You haven\'t given access to your microphone; no audio will be recorded.</string>
    <string name="mcam_file_size_limit_reached">You\'ve reached the maximum file size!</string>
    <string name="mcam_image_preview_error_title">Image preview error</string>
    <string name="mcam_image_preview_error_message">Could not decode bitmap</string>
    <string name="there_are_no_available_slots_please_select_another_day">There are no available slots. Please select another day.</string>
    <string name="write_a_comment_here">Write your comment</string>
    <string name="write_a_description_here">Write your description</string>
    <string name="unfollow_user">Unfollow <b>@%s?</b></string>
    <string name="no_comment_yet">No Comment yet</string>
    <string name="no_like_yet">No like yet</string>
    <string name="no_res_found">No Record Found</string>
    <string name="no_data_found">No Record Found</string>
    <string name="read_more">show more</string>
    <string name="read_less">show less</string>
    <string name="tag_services">Tag Services</string>
    <string name="tag_people">Tag People</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="write_a_caption">Write a caption…</string>
    <string name="new_post">New Post</string>
    <string name="unfollow">Unfollow</string>
    <string name="explore">Explore</string>
    <string name="add_more_story">Add More Story</string>
    <string name="write_a_message">Write a message....</string>
    <string name="error_required_field">Please enter required field</string>
    <string name="error_email_or_username_required">Please enter email or username</string>
    <string name="error_username_required">Please enter username</string>
    <string name="error_username_contain_space">username can not contain blank space</string>
    <string name="error_username_length">Username must be at least 4 characters long.</string>
    <string name="error_user_name_exist">That username is already being used.</string>
    <string name="error_firstname_required">Please enter first name</string>
    <string name="error_lastname_required">Please enter last name</string>
    <string name="error_businessname_required">Please enter business name.</string>
    <string name="error_businessname_length">Username must be at least 4 characters long.</string>
    <string name="error_email_required">Please enter your email address.</string>
    <string name="error_invalid_email">Please enter a valid email address.</string>
    <string name="error_invalid_email2">This email address is invalid</string>
    <string name="error_password_required">Please enter your password.</string>
    <string name="error_address_required">Please Select Address.</string>
    <string name="error_invalid_password_length">Passwords must be at least 8 characters long.</string>
    <string name="error_invalid_password_special_character">Your password must have at least one special character.</string>
    <string name="error_invalid_password_uppercase_character">Your password must have at least one uppercase character.</string>
    <string name="error_invalid_password_digit_character">Your password must have at least one digit character.</string>
    <string name="error_confirm_password_not_match">Password and confirm password do not match.</string>
    <string name="error_password_vailidation">Use 8 or more characters including \nuppercase letters and numbers.</string>
    <string name="error_phone_no_reuired">Please enter a phone number</string>
    <string name="error_phone_no_length">Phone number min 4 and max 15</string>
    <string name="error_phone_no_invalid">Please enter a valid phone number</string>
    <string name="error_phone_no_exist">Phone number already exist</string>
    <string name="error_otp_reuired">Please enter OTP</string>
    <string name="error_otp_invalid">Please enter valid OTP</string>
    <string name="error_otp_send">New otp has been sent to you</string>
    <string name="error_otp_varified">You have successfully verified your phone number</string>
    <string name="error_current_address_required">Enter your current address</string>
    <string name="error_profile_image">Select or take profile image</string>
    <string name="text_login_email_error">Enter your email or register number first</string>
    <string name="ok_label">Ok</string>
    <string name="txt_under_maintenance">The web server koobi.co.uk is currently undergoing some maintenance</string>
    <string name="temporary_maintenance">Temporary Maintenance</string>
    <string name="what_happened">What happened?</string>
    <string name="txt_description_maintenance">Server and website need regular maintenance just like a car to keep them up and running smoothly.</string>
    <string name="text_services">Services</string>
    <string name="text_total">Total</string>
    <string name="text_voucher_code">Voucher Code</string>
    <string name="not_working">not working</string>
    <string name="once_upon_a_time">Once upon a time…</string>
    <string name="story_duration">Story duration</string>
    <string name="is_text_progress_enabled">Is text progress enabled?</string>
    <string name="is_immersive_enabled">Is immersive enabled?</string>
    <string name="is_cache_enabled">Is cache enabled?</string>
    <string name="crop_image_activity_title">Crop Image</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="result_image_desc">crop result</string>
    <string name="pick_image_intent_text">Choose an image</string>
    <string name="under_development">Under Development…</string>
    <string name="search">Search</string>
    <string name="error_msg_network">Check your network connection</string>
    <string name="retry">Retry</string>
    <string name="no_conncetion">No Conncetion</string>
    <string name="no_conncetion_msg">Please check your network connection.</string>
    <string name="independent">Independent</string>
    <string name="business">Business</string>
    <string name="email_id">Email</string>
    <string name="trimming_progress">Trimming your video...</string>
    <string name="phone_number">Phone Number</string>
    <string name="continue_txt">Continue</string>
    <string name="country_activity">Choose a country</string>
    <string name="welcome_to">Welcome to\n<b>Mualab</b></string>
    <string name="verify_phone_no">Verify</string>
    <string name="need_otp_verification">Please enter your 4 digit verification code</string>
    <string name="enter_your_email_id_and_phone_no">Enter your Email Address and Mobile Number</string>
    <string name="next">Next</string>
    <string name="resent_code">Resend Code</string>
    <string name="submit">Submit</string>
    <string name="need_four_digite_code">You need to enter your 4 digit verification \n code to create your account.</string>
    <string name="blank_string">\n</string>
    <string name="_1">1</string>
    <string name="_2">2\n<font size="10">ABC</font></string>
    <string name="_3">3\n<font size="10">DEF</font></string>
    <string name="_4">4\n<font size="10">GHI</font></string>
    <string name="_5">5\n<font size="10">JKL</font></string>
    <string name="_6">6\n<font size="10">MNO</font></string>
    <string name="_7">7\n<font size="10">PQRS</font></string>
    <string name="_8">8\n<font size="10">TUV</font></string>
    <string name="_9">9\n<font size="10">WXYZ</font></string>
    <string name="create_profile">Create Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="business_name">Business Name</string>
    <string name="choose_username">Choose a Username</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="set_date">Set Date Of Birth</string>
    <string name="error_dob">Select Date Of Birth</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="done">Done</string>
    <string name="address">Address</string>
    <string name="address_activity">Add Business Location</string>
    <string name="business_address">Business address</string>
    <string name="error_business_address">Input Business address</string>
    <string name="pick_your_business_place">Pick Your Business Place</string>
    <string name="pick_your_place">Pick Your Place</string>
    <string name="city">City*</string>
    <string name="town_city">Town/City*</string>
    <string name="state">State*</string>
    <string name="country">Country*</string>
    <string name="postal_code">Postal Code*</string>
    <string name="locality">Locality, area or street*</string>
    <string name="line_of_address1">1st line of address*</string>
    <string name="line_of_address2">2nd line of address (Optional)</string>
    <string name="logout">Logout</string>
    <string name="enter_post_code">Enter post code</string>
    <string name="house_building_flat_number">House/Building/Flat number *</string>
    <string name="gps_permission_alert">Need enable location and permission for search near by artist.</string>
    <string name="month">Month</string>
    <string name="add_location">Add Location</string>
    <string name="save">Save</string>
</resources>