<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.authentication.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_bg"
        android:contentDescription="@string/todo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:layout_marginRight="26dp"
                android:layout_marginTop="28dp"
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                android:padding="10dp">

                <EditText
                    android:id="@+id/ed_username"
                    style="@style/My_Edittext"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@null"

                    android:hint="@string/email_or_username"
                    android:inputType="textPersonName" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginLeft="5dp"
                    android:background="@color/white"
                    android:layout_marginStart="5dp" />
                <EditText
                    android:id="@+id/ed_password"
                    style="@style/My_Edittext"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/password"
                    android:background="@null"
                    android:inputType="textPassword" />
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:background="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="55dp"
                    android:text="@string/login"
                    android:gravity="center"
                    android:fontFamily="@font/nunito_regular"
                    android:textSize="18sp"
                    android:id="@+id/btn_login"
                    android:background="@drawable/bg_button"
                    android:textColor="@color/darkpink" />

                <TextView
                    android:id="@+id/tvForgotPassword"
                    style="@style/TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:padding="5dp"
                    android:fontFamily="@font/nunito_regular"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:gravity="center"

                    android:text="@string/forgot_password"
                    android:textColor="@drawable/tv_selector"
                       />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0.5dp"
                        android:layout_weight=".4"
                        android:background="@color/colorPrimaryTransprent4" />

                    <TextView
                        style="@style/TextView.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:gravity="center"
                        android:fontFamily="@font/nunito_semibold"
                        android:text="@string/or"
                        android:textSize="18sp"
                        tools:ignore="UnusedAttribute" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0.5dp"
                        android:layout_weight=".4"
                        android:background="@color/colorPrimaryTransprent4" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/ivFacebook"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:background="?selectableItemBackgroundBorderless"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/fb_icon" />

                    <ImageView
                        android:id="@+id/ivInstragram"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="12dp"

                        android:background="?selectableItemBackgroundBorderless"
                        android:src="@drawable/instragram_icon"

                        android:layout_marginStart="12dp" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextView"
                    android:layout_width="wrap_content"
                    android:id="@+id/createNewAccount"
                    android:textSize="16sp"
                    android:fontFamily="@font/nunito_regular"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account" />

                <TextView
                    style="@style/TextView.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:id="@+id/createaccount"
                    android:text="@string/sign_up"
                    android:textSize="16sp"
                    android:layout_marginStart="3dp" />


            </LinearLayout>


            <TextView
                style="@style/TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:id="@+id/tvCustomerApp"
                android:textSize="16sp"
                android:fontFamily="@font/nunito_regular"
                android:text="@string/signup_as_service_provider" />


        </LinearLayout>


    </ScrollView>




</RelativeLayout>
