<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/ivBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg"
        android:alpha=".7"/>

    <LinearLayout
        android:id="@+id/llView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:orientation="horizontal"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:src="@drawable/white_back_ico"
                android:tint="@color/white"
                android:background="?selectableItemBackgroundBorderless"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                style="@style/TextView.Bold"
                android:textSize="18sp"
                android:text="@string/remind_my_password"/>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/progressBarStyleSmall"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:visibility="gone"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@color/white"
                tools:targetApi="lollipop"
                android:layout_marginEnd="10dp"
                android:layout_alignParentEnd="true" />


        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"

                style="@style/TextView"
                android:textColor="@color/white"
                android:text="@string/forgot_pwd_remind_txt"/>

            <EditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/My_Edittext"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="@string/enter_the_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:maxLength="50"
                android:padding="8dp"
                android:background="@drawable/broder_bg_light_gray" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnSubmit"
                android:background="@drawable/bg_button"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:fontFamily="@font/nunito_semibold"
                android:layout_marginTop="30dp"
                android:textAllCaps="false"
                android:textColor="@color/darkpink"
                android:gravity="center"
                android:text="@string/reset_password" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>