<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/profile_pic_bg"
    android:layout_height="match_parent"
    android:id="@+id/rl_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.authentication.AddAddressActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:id="@+id/header"
        android:layout_height="45dp">

        <ImageView
            android:layout_width="25dp"
            android:src="@drawable/white_back_ico"
            android:id="@+id/img_back"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerInParent="true"
                android:fontFamily="@font/nunito_regular"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/add_location"
                android:layout_height="wrap_content" />



        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="@color/white"
            android:layout_alignParentBottom="true"/>


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_below="@id/header"
        android:overScrollMode="never"

        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:onClick="hideKeyboard">

            <LinearLayout
                android:id="@+id/ll_picAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="?android:selectableItemBackground"
                android:padding="5dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/location"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    style="@style/TextView"
                    android:textSize="16sp"
                    android:text="@string/pick_your_place"
                    android:layout_marginStart="10dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                style="@style/TextView"
                android:layout_gravity="center_horizontal"
                android:textSize="16sp"
                android:text="OR"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical">


                <EditText
                    android:id="@+id/edInputPostcode"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    style="@style/My_Edittext"
                    android:textSize="16sp"
                    android:hint="@string/enter_post_code"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:maxLength="10"
                    android:layout_centerInParent="true"
                    android:inputType="textPostalAddress|textCapCharacters"
                    android:gravity="center_horizontal"/>

                <ImageView
                    android:id="@+id/iv_picode_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/white_tick_ico"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/edInputPostcode"
                    android:visibility="gone"/>

            </RelativeLayout>



            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_locality"
                android:theme="@style/tvStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:errorTextAppearance="@style/txtinputError_appearance">

                <EditText
                    android:id="@+id/ed_locality"
                    style="@style/My_Edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="20"
                    android:hint="@string/line_of_address1" />

            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/txt_save"
                android:layout_width="250dp"
                android:layout_gravity="center"
                android:layout_height="40dp"
                android:layout_marginTop="55dp"
                android:text="@string/save"
                android:gravity="center"
                android:fontFamily="@font/nunito_regular"
                android:textSize="18sp"
                android:background="@drawable/bg_button"
                android:textColor="@color/darkpink" />





        </LinearLayout>



    </ScrollView>




</RelativeLayout>
